--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  /* background: cadetblue; */
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    border-bottom: solid 1px black;
   }
   
   .navbar-container {
@@ -16,17 +17,6 @@
     align-items: center;
     height: 80px;
     max-width: 1500px;
-  }
-  
-  .navbar-logo {
-    color: #fff;
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
   }
   
   .fa-typo3 {
@@ -41,25 +31,29 @@
     list-style: none;
     text-align: center;
     width: 60vw;
-    justify-content: end;
-    margin-right: 2rem;
+    justify-content: right;
+    margin-right: -15rem;
+    padding-top: 2.7rem;
   }
   
   .nav-item {
-    height: 80px;
+    height: 40px;
   }
   
   .nav-links {
-    color: #fff;
+    color: black;
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
+    padding: 0rem 1rem;
+    height: 90%;
+    cursor: pointer;
+    font-size: 1.4rem;
+    margin-left: 1.3rem;
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    border-bottom: 3px solid red;
     transition: all 0.2s ease-out;
   }
   
@@ -104,7 +98,6 @@
       text-align: center;
       padding: 2rem;
       width: 100%;
-      display: table;
     }
   
     .nav-links:hover {
