updated home page

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,4 @@
 .navbar {
-  /* background: cadetblue; */
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,7 +7,9 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    border-bottom: solid 1px black;
+    width: 85%;
+    float: right;
+    padding-right: 3rem;
   }
   
   .navbar-container {
@@ -32,28 +33,37 @@
     text-align: center;
     width: 60vw;
     justify-content: right;
-    margin-right: -15rem;
+    margin-right: -25rem;
     padding-top: 2.7rem;
   }
   
   .nav-item {
-    height: 40px;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    height: 50px;
+    border-right: 1px black solid;
+    margin: 0rem 0rem;
+    padding-right: 1.2rem;
+    padding-left: 0.9rem;
   }
   
   .nav-links {
-    color: black;
+    color: #009432;
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0rem 1rem;
+    padding: 0rem 0rem;
     height: 90%;
     cursor: pointer;
-    font-size: 1.4rem;
-    margin-left: 1.3rem;
+    font-size: 1.7rem;
+    font-family: sans-serif;
+    font-weight: bold;
   }
   
   .nav-links:hover {
-    border-bottom: 3px solid red;
+    color: #20bf6b;
+    transform: scale(1.2);
     transition: all 0.2s ease-out;
   }
   
