--- a/src/components/Signup page/Signup.css
+++ b/src/components/Signup page/Signup.css
@@ -4,17 +4,19 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    height: 100vh;
+    height: 97vh;
     width: 100%;
+    overflow-y: hidden;
 }
 
  .overlay-color {
     display: flex;
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    background: #283593;
+    background: #4b4b4b;
     opacity: 60%;
+    overflow-y: hidden;
 }
 
 .logo {
@@ -68,5 +70,6 @@ button:active {
 
 .signup-box:hover ,.signup-box:focus{
     background: #af0606;
+    transform: scale(0.95);
   }
 
