--- a/src/components/Info page/About.css
+++ b/src/components/Info page/About.css
@@ -6,18 +6,19 @@
     height: 97vh;
     width: 100%;
     overflow-y: hidden;  
-    align-items: center;
 }
 
 .title {
     text-align: center;
-    margin-top: 20vh;
     margin-bottom: 2vh;
     font-family: sans-serif;
+    position: relative;
 }
 
 .paragraph-wrapper {
     width: 75%;
+    align-self: center;
+    position: relative;
 }
 
 .intro-paragraph {
@@ -29,6 +30,13 @@
 
 .link-visit {
     cursor: pointer;
+    display: inline-flex;
+    transition: 50ms;
+}
+
+.link-visit:hover {
+    border-bottom: 1px solid #5a73fc;
+    transform: scale(1.1);
 }
 
 .text-link {
@@ -36,8 +44,11 @@
     font-size: 1.2rem;
     margin-right: 0.3rem;
     color: #5a73fc;
+    display: flex;
 }
 
 .arrow {
     color: #5a73fc;
+    display: flex;
 }
+  
