--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,6 +35,15 @@
   display: flex;
   align-items: center;
 }
+.logo-img {
+  justify-self: start;
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+}
 
 .navbar-icon {
   margin-right: 0.5rem;
@@ -55,7 +64,7 @@
 }
 
 .nav-item:hover {
-  border-bottom: 2px solid #f00946;
+  border-bottom: 3px solid #f00946;
 }
 
 .nav-links {
