--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -55,7 +55,7 @@
   display: flex;
 }
 
-.footer-link-items {
+.contact, .social-icons {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -63,39 +63,42 @@
   text-align: left;
   width: 160px;
   box-sizing: border-box;
-}
-
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
   color: #fff;
 }
 
-.footer-link-items a {
+.contact h2, .social-icons h2 {
+  margin-bottom: 16px;
+}
+
+.social-icons > h2 {
+  color: #fff;
+}
+
+.contact a {
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
 
-.footer-link-items a:hover {
+.contact a:hover {
   color: #e9e9e9;
   transition: 0.3s ease-out;
 }
 
-.footer-email-form h2 {
-  margin-bottom: 2rem;
+.icons-wrapper {
+  flex-direction: row;
+
 }
 
-.footer-input::placeholder {
-  color: #b1b1b1;
-}
+
+
+
 
 /* Social Icons */
 .social-icon-link {
   color: #fff;
   font-size: 24px;
+  
 }
 
 .social-media {
