--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -33,16 +33,6 @@
   font-size: 20px;
 }
 
-.footer-input {
-  padding: 8px 24px;
-  border-radius: 2px;
-  margin-right: 10px;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  margin-bottom: 16px;
-  border: 1px solid #fff;
-}
 
 .footer-links {
   width: 100%;
@@ -55,7 +45,7 @@
   display: flex;
 }
 
-.contact, .social-icons {
+.contact, .social-media {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -66,88 +56,64 @@
   color: #fff;
 }
 
-.contact h2, .social-icons h2 {
+.contact h2, .social-media h2 {
   margin-bottom: 16px;
+  font-size: 1.5rem;
 }
 
-.social-icons > h2 {
+.social-media > h2 {
   color: #fff;
 }
 
 .contact a {
   color: #fff;
+  font-size: 1.2rem;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
 
 .contact a:hover {
-  color: #e9e9e9;
+  color: #f00946;
   transition: 0.3s ease-out;
 }
 
+/* Social Icons */
 .icons-wrapper {
   flex-direction: row;
-
+  margin-top: -100px;
 }
 
-
-
-
-
-/* Social Icons */
 .social-icon-link {
   color: #fff;
-  font-size: 24px;
-  
+  font-size: 40px;
+  transition: 50ms ease-in;
 }
 
 .social-media {
-  max-width: 1000px;
-  width: 100%;
-}
-
-.social-media-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  max-width: 1000px;
-  margin: 40px auto 0 auto;
-}
-
-.social-icons {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 240px;
 }
 
-.social-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 16px;
+.social-icon-link:hover {
+  transform: scale(1.3);
 }
 
+.fb-icon {
+  margin-right: 30px;
+}
+/*--------------------------------*/
 .website-rights {
   color: #fff;
-  margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 3px;
+  align-items: center;
+  max-width: 1000px;
+  margin: 85px auto 0px auto;
 }
 
-.logo-footer {
-    justify-self: start;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
-}
 
 @media screen and (max-width: 820px) {
   .footer-links {
