--- a/src/components/pages/Homepage/Home.css
+++ b/src/components/pages/Homepage/Home.css
@@ -1,6 +1,7 @@
 .hero-container {
-    background-image: url('background-image.jpg');
+    background-image: url('background.jpg');
     background-size: cover;
+    opacity: 80%;
     height: 100vh;
     width: 100%;
     display: flex;
