--- a/src/components/pages/Info page/HeroSection.css
+++ b/src/components/pages/Info page/HeroSection.css
@@ -87,12 +87,12 @@
 
   .visit-link:hover {
     text-decoration: underline;
+    transform: scale(1.1);
   }
 
   .visit-text {
     font-size: 20px;
     padding-right: 3px;
-    
   }
 
   .link-arrow {
