--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -84,6 +84,23 @@
   display: none;
 }
 
+/*---------- LARGE SCREEN ONLY -----------*/
+@media screen and (min-width: 1200px) {
+  .container {
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin-right: 20px;
+    padding-right: 15px;
+    padding-left: 0px;
+  }
+
+  .navbar-logo {
+    margin-left: -100px;
+    font-size: 2.5rem;
+  }
+}
+
 @media screen and (max-width: 960px) {
   .NavbarItems {
     position: relative;
