--- a/src/components/pages/Info page/HeroSection.css
+++ b/src/components/pages/Info page/HeroSection.css
@@ -28,25 +28,19 @@
     max-width: 360px;
     padding-top: 0;
     padding-bottom: 60px;
-    
-  }
-  
-  .top-line {
-    color: #f00946;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 700;
-    letter-spacing: 1.4px;
-    text-transform: uppercase;
-    margin-bottom: 16px;
   }
   
   .heading {
     margin-bottom: 24px;
     font-size: 48px;
-    line-height: 1.1;
-    font-weight: 600;
-    color: #f7f8fa;
+    font-weight: 600;    
+    cursor: default;
+    transition: 50ms;
+  }
+
+  .heading:hover {
+    transform: scale3d(1.1, 1.3, 1.1);
+    color: red;
   }
   
   .dark {
@@ -99,10 +93,32 @@
     font-size: 15px;
   }
 
+  /*----------------- LARGE SCREEN ONLY --------------*/
+  @media screen and (min-width: 1200px) {
+    .about-container {
+      padding-right: 20px;
+      padding-left: 0px;
+      margin-right: 60px;
+      margin-left: 60px;
+    }
+
+    .home__hero-subtitle {
+      max-width: 500px;
+      margin-bottom: 20px;
+      font-size: 22px;
+      line-height: 24px;
+    }
+
+    .home__hero-text-wrapper {
+      max-width: 400px;
+      padding-top: 0;
+      padding-bottom: 60px;
+    }
+  }
 
   
   @media screen and (max-width: 991px) {
-    .container {
+    .about-container {
       padding-right: 30px;
       padding-left: 30px;
     }
