--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -82,6 +82,7 @@
 
 .menu-icon {
   display: none;
+  color: #fff;
 }
 
 /*---------- LARGE SCREEN ONLY -----------*/
@@ -96,10 +97,13 @@
   }
 
   .navbar-logo {
-    margin-left: -100px;
+    margin-left: 5rem;
     font-size: 2.5rem;
   }
 }
+/*--------------------------------------*/
+
+
 
 @media screen and (max-width: 960px) {
   .NavbarItems {
@@ -151,6 +155,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    font-size: 1.4rem;
     transform: translate(25%, 50%);
   }
 
@@ -176,4 +181,21 @@
     width: 100%;
     height: 120px;
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    width: 100vw;
+  }
+
+  .navbar-logo {
+    font-size: 1.1rem;
+    margin: 10px 10px;
+  }
+
+  .logo-img {
+    width: 30px;
+    height: 30px;
+  }
+
 }
