--- a/src/components/pages/Info page/HeroSection.css
+++ b/src/components/pages/Info page/HeroSection.css
@@ -76,7 +76,6 @@
     display: inline-block; 
     flex-wrap: wrap;
     flex-direction: row;
-    
   }
 
   .visit-link:hover {
@@ -93,7 +92,126 @@
     font-size: 15px;
   }
 
-  /*----------------- LARGE SCREEN ONLY --------------*/
+  /*------------- EXTRA SMALL DEVICES -------------*/
+  @media only screen and (max-width: 600px) {
+    .row {
+      display: flex;
+      flex-direction: column;
+      align-content:  center;
+      margin-left: -100px;
+      margin-right: 100px;
+    }
+
+    .home__hero-text-wrapper {
+      width: 90vw;
+      padding-top: 0;
+      margin-bottom: 0px;
+      padding-bottom: 30px;
+    }
+
+    .home__hero-subtitle {
+      max-width: 500vw;
+      
+      margin-bottom: 15px;
+      font-size: 15px;
+      line-height: 24px;
+    }
+
+    .visit-text {
+      font-size: 13px;
+    }
+
+    .heading {
+      width: 100%;
+      margin-bottom: 20px;
+      padding-left: 30px;
+      font-size: 36px;
+      font-weight: 600;    
+      cursor: default;
+      transition: 50ms;
+      justify-self: center;
+    }
+  }
+
+  /*----------- MEDIUM SCREEN ONLY --------------*/
+  @media (min-width: 768px) and (max-width: 991px) {
+    .home__hero-section {
+      padding: 80px 0px;
+    }
+
+    .row {
+      display: flex;
+      flex-direction: column;
+      align-content:  center;
+      margin-left: -100px;
+      margin-right: 100px;
+    }
+
+    .home__hero-text-wrapper {
+      width: 100vw;
+      padding-top: 0;
+      margin-bottom: 0px;
+      padding-bottom: 30px;
+    }
+
+    .home__hero-subtitle {
+      max-width: 550px;
+      width: 100vw;
+      margin-bottom: 15px;
+      font-size: 24px;
+      line-height: 24px;
+    }
+
+    .heading {
+      width: 100%;
+      margin-bottom: 20px;
+      padding-left: 30px;
+      font-size: 48px;
+      font-weight: 600;    
+      cursor: default;
+      transition: 50ms;
+      justify-self: center;
+    }
+
+  }
+
+  /*---------- LARGE DEVICES --------------*/
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .about-container {
+      padding-right: 50px;
+      padding-left: 30px;
+    }
+
+    .row {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .home__hero-text-wrapper {
+      max-width: 300px;
+      padding-top: 0;
+      padding-bottom: 60px;
+    }
+
+    .home__hero-subtitle {
+      max-width: 360px;
+      width: 100vw;
+      margin-bottom: 15px;
+      font-size: 24px;
+      line-height: 24px;
+    }
+
+    .visit-text {
+      font-size: 25px;
+    }
+
+
+
+  }
+  /*-----------------------------------------------*/
+
+
+  /*----------------- EXTRA LARGE SCREEN ONLY --------------*/
   @media screen and (min-width: 1200px) {
     .about-container {
       padding-right: 20px;
@@ -105,7 +223,7 @@
     .home__hero-subtitle {
       max-width: 500px;
       margin-bottom: 20px;
-      font-size: 22px;
+      font-size: 1.4rem;
       line-height: 24px;
     }
 
@@ -115,22 +233,8 @@
       padding-bottom: 60px;
     }
   }
+  /*-------------------------------------*/
 
   
-  @media screen and (max-width: 991px) {
-    .about-container {
-      padding-right: 30px;
-      padding-left: 30px;
-    }
-  }
   
-  @media screen and (max-width: 768px) {
-    .home__hero-text-wrapper {
-      padding-bottom: 65px;
-    }
   
-    .col {
-      max-width: 100%;
-      flex-basis: 100%;
-    }
-  }
