updated challenge page

--- a/src/components/pages/Info page/HeroSection.css
+++ b/src/components/pages/Info page/HeroSection.css
@@ -55,7 +55,7 @@
   .home__hero-subtitle {
     max-width: 440px;
     margin-bottom: 20px;
-    font-size: 5rem;
+    font-size: 4em;
     line-height: 24px;
     color: #777;
   }
