--- a/src/components/pages/Challengepage/Challenge.css
+++ b/src/components/pages/Challengepage/Challenge.css
@@ -7,31 +7,23 @@
 }
   
   .challenge__container-card {
-    /* background: linear-gradient(45deg, #0660e9 0%, #276afb 100%); */
     background: #fafafa;
     box-shadow: 0 20px 20px rgba(56, 125, 255, 0.2);
     width: 280px;
-    height: 300px;
+    height: auto;
     text-decoration: none;
     border-radius: 15px;
     position: relative;
+    padding-bottom:10px ;
   }
 
-  .challenge__container-card.active {
-    left: 0;
-    height: 75vh;
-    transition: all 0.6s step-end;
-    z-index: 1;
-  }
-  
   .challenge__container-card:hover {
     transform: scale(1.1);
     transition: 90ms ease-out;
-    
   }
   
-  .challenge__container-card:nth-child(2), .challenge__container-card:nth-child(4)  {
-    margin: 0 24px;
+  .challenge__container-card:nth-child(2)  {
+    margin: 0 30px;
   }
   
   .challenge__container {
@@ -49,7 +41,7 @@
   
   .challenge__heading {
     color: #1c2237;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     cursor: default;
     font-size: 2.2em;
   }
@@ -60,7 +52,6 @@
   }
   
   .challenge__container-cardInfo {
-    display: flex;
     flex-direction: column;
     height: auto;
     padding: 0px;
@@ -71,10 +62,14 @@
   
   /*---------- CARD HEADER ---------*/
   .challenge-icon {
-    font-size: 64px;
+    font-size: 84px;
+    color: white;
+    left: 40px;
+    top: 20px;
+    position: absolute;
   }
 
-  .challenge-card-header {
+  .challenge-card-header  {
     /* margin: 22px 0; */
     background: red;
     width: 100%;
@@ -83,6 +78,25 @@
     position: relative;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    color: white;
+
+  }
+
+  .header1 {
+    background-color: #990000;
+    background-image: linear-gradient(147deg, #ff0000 0%, #990000 74%);
+  }
+
+  .header2 {
+    background-color: #045de9;
+    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
+  }
+
+  .header3 {
+    
+    background-color: #378b29;
+    background: linear-gradient(315deg, #378b29 0%, #74d680 74%);
+
   }
 
   .challenge-card-header h3 {
@@ -91,29 +105,35 @@
     position: absolute;
     right: 10px;
     bottom: 5px;
+    
   }
   /*------------------------------*/
 
   /*--------- CARD BODY --------------*/
   .cardInfo-detail {
     padding-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
     text-align: center;
     background: #fafafa;
   }
-  
+  .challenge__heading {
+    font-size: 1.7em;
+  }
+
   .cardInfo-detail p {
     font-size: 24px;
     margin-bottom: 20px;
     cursor: default;
   }
 
-  .time-heading, .time-number {
-    font-size: 22px;
+  .time {
+    margin-bottom: 15px;
+    font-size: 20px;
+    
   }
-
+  
   .progress-status{
-    margin-top: 15px;
     display: flex;
     justify-content: center;
   }
@@ -134,20 +154,37 @@
 
   /*----------------------------------*/
   
+  /*---------- CARD FOOTER -------------*/
   .toggle-arrow {
     align-items: center;
     align-self: center;
-    display: flex;
     width: 50px;
     height: 50px;
-    position: absolute;
     bottom: 0px;
     cursor: pointer;
+    width: 100%;
   }
 
   .toggle-arrow.invalid-toggle {
     cursor: default;
   }
+
+  .Collapsible {
+    text-align: center;   
+  }
+
+  .expanded-text {
+    font-size: 1em;
+    padding: 12px;
+    cursor: default;
+  }
+
+  .toggle-up {
+    border-bottom: 1px solid #dbdbdb;
+    width: 80%;
+  }
+
+  /*---------------------------------------*/
 
   /*-------------------------------------------------------*/
   @media screen and (max-width: 960px) {
@@ -161,6 +198,7 @@
   
     .challenge__container-card {
       width: 90%;
+      height: auto;
     }
   
     .challenge__wrapper {
@@ -170,12 +208,21 @@
       align-items: center;
     }
   
-    .challenge__container-card:nth-child(2), .challenge__container-card:nth-child(4) {
-      margin: 24px;
+    .challenge__container-card:nth-child(2) {
+      margin: 10vw;
     }
 
     .challenge__container-card:hover {
       transform: scale(1.06);
       transition: all 0.4s ease-out;
+    }
+
+    /*------------ CARD BODY --------------*/
+    .cardInfo-detail p {
+      font-size: 22px;
+    }
+
+    .time {
+      font-size: 18px;
     }
   }
