--- a/src/components/pages/RequirePage/Card.css
+++ b/src/components/pages/RequirePage/Card.css
@@ -18,7 +18,8 @@
   .require__container-card:hover {
     transform: scale(1.1);
     transition: .4s ease-out;
-    background: #242424;
+    background-color: #29539b;
+background-image: linear-gradient(315deg, #29539b 0%, #1e3b70 74%);
     transition-delay: 0.05s;
   }
   
@@ -40,15 +41,9 @@
   }
   
   .require__heading {
-    color: #1c2237;
     margin-bottom: 20px;
     cursor: default;
     font-size: 2.2em;
-  }
-
-  .pricing__heading:hover {
-    transform: scale3d(1.1, 1.1, 1.3);
-    color: red;
   }
   
   .require__container-cardInfo {
