--- a/src/components/pages/Challengepage/ButtonC.css
+++ b/src/components/pages/Challengepage/ButtonC.css
@@ -3,10 +3,10 @@
   }
   
   .btn {
-    padding: 8px 20px;
+    padding: 10px 20px;
     border-radius: 4px;
     outline: none;
-    border: none;
+    /* border: none; */
     cursor: pointer;
     white-space: nowrap;
   }
@@ -14,7 +14,8 @@
   .btn--primary {
     background-color: var(--primary);
     color: #242424;
-    border: 1px solid var(--primary);
+    border: none;
+    /* border: 1px solid var(--primary); */
   }
 
   .btn--mobile {
