--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'PT sans', sans-serif;
+}
+
+
+.ant-back-top {
+  width: fit-content;
+}
+
+.ant-back-top-content {
+  background-color: black;
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  font-size: 28px;
+  font-weight: bolder;
+  padding: 8px;
+  position: fixed;
+  cursor: pointer;
+  bottom: 50px;
+  right: 50px;
 }
 
