--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .footer-subscription {
@@ -109,6 +110,8 @@
   margin: 25px auto 0px auto;
 }
 
+
+
 /*------------ EXTRA SMALL DEVICES ---------*/
 @media only screen and (max-width: 600px) {
   .footer-container {
@@ -176,6 +179,11 @@
   }
 }
 
+@media screen and (min-width: 961px) and (max-width: 1227px) {
+  .footer-container {
+    width: 128%;
+  }
+}
   
 
 
