--- a/src/components/pages/Challengepage/Challenge.css
+++ b/src/components/pages/Challengepage/Challenge.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #fafafa;
+    
 }
   
   .challenge__container-card {
@@ -23,7 +23,7 @@
   }
   
   .challenge__container-card:nth-child(2)  {
-    margin: 0 30px;
+    margin: 0 65px;
   }
   
   .challenge__container {
@@ -43,7 +43,7 @@
     color: #1c2237;
     margin-bottom: 25px;
     cursor: default;
-    font-size: 2.2em;
+    font-size: 2.3em;
   }
 
   .challenge__heading:hover {
@@ -62,10 +62,10 @@
   
   /*---------- CARD HEADER ---------*/
   .challenge-icon {
-    font-size: 84px;
+    font-size: 5em;
     color: white;
-    left: 40px;
-    top: 20px;
+    left: 3vw;
+    top: 4vh;
     position: absolute;
   }
 
@@ -117,10 +117,7 @@
     text-align: center;
     background: #fafafa;
   }
-  .challenge__heading {
-    font-size: 1.7em;
-  }
-
+  
   .cardInfo-detail p {
     font-size: 24px;
     margin-bottom: 20px;
@@ -224,5 +221,11 @@
 
     .time {
       font-size: 18px;
+    }
+  }
+
+  @media screen and (min-width: 961px) and (max-width: 1227px) {
+    .challenge__section {
+      width: 128%;
     }
   }
