--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@
   right: 50px;
 }
 
+@media only screen and (max-width: 600px) {
+  .ant-back-top-content {
+    bottom: 25px;
+    right: 25px;
+  }
+}
+
