--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -71,9 +71,10 @@
   padding-top: 5px;
 }
 
-.contact a:hover {
-  color: #f00946;
+.contact .web-link:hover {
+  color: #8c7ae6;
   transition: 0.3s ease-out;
+  transform:scale(1.1);
 }
 
 /* Social Icons */
@@ -92,6 +93,14 @@
 
 .social-icon-link:hover {
   transform: scale(1.3);
+}
+
+.fb-icon:hover {
+  color: #3B5998;
+}
+
+.yt-icon:hover {
+  color:#FF0000
 }
 
 .fb-icon {
