--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,6 +45,18 @@
   margin-right: 5px;
 }
 
+.slogan-img {
+  justify-self: start;
+  cursor: pointer;
+  width: 160px;
+  height: 160px;
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  cursor: default;
+}
+
 .navbar-icon {
   margin-right: 0.5rem;
 }
@@ -122,6 +134,13 @@
     transition: all 0.5s ease;
   }
 
+  .slogan-img {
+    width: 70px;
+    height: 70px;
+    padding-top: 0;
+    margin-top: -20px;
+  }
+
   .nav-menu.active {
     background: #1c2237;
     left: 0;
@@ -196,6 +215,13 @@
   .logo-img {
     width: 30px;
     height: 30px;
+  }
+
+  .slogan-img {
+    margin-top: -10px;
+    width: 65px;
+    height: 65px;
+    margin-left: 0;
   }
 
 }
