--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,19 @@
 
 @media only screen and (max-width: 600px) {
   .ant-back-top-content {
-    bottom: 25px;
-    right: 25px;
+  width: 35px;
+  height: 35px;
+  border-radius: 25px;
+  font-size: 20px;
+  padding: 6px;
+  bottom: 10px;
+  right: 5px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .ant-back-top-content {
+    
   }
 }
 
