--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,11 +35,12 @@
   display: flex;
   align-items: center;
 }
+
 .logo-img {
   justify-self: start;
   cursor: pointer;
-  width: 45px;
-  height: 45px;
+  width: 65px;
+  height: 65px;
   display: flex;
   align-items: center;
   margin-right: 5px;
@@ -48,8 +49,8 @@
 .slogan-img {
   justify-self: start;
   cursor: pointer;
-  width: 160px;
-  height: 160px;
+  width: 170px;
+  height: 170px;
   padding-top: 10px;
   display: flex;
   align-items: center;
@@ -115,8 +116,6 @@
 }
 /*--------------------------------------*/
 
-
-
 @media screen and (max-width: 960px) {
   .NavbarItems {
     position: relative;
@@ -134,11 +133,15 @@
     transition: all 0.5s ease;
   }
 
+  .logo-img {
+    margin-top: -60px;
+  }
+
   .slogan-img {
-    width: 70px;
-    height: 70px;
+    width: 120px;
+    height: 120px;
     padding-top: 0;
-    margin-top: -20px;
+    margin-top: -50px;
   }
 
   .nav-menu.active {
