--- a/src/components/pages/RequirePage/Card.css
+++ b/src/components/pages/RequirePage/Card.css
@@ -17,27 +17,12 @@
   }
   
   .require__container-card:hover {
-    
-    transition: .5s ease-in;
+    transition: .2s ease-in;
     background-color: #045de9;
-background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
-    animation: pile-hover 1s infinite;
-    
+    transform: scale(1.1);
+    background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
   }
 
-  @keyframes pile-hover {
-    0% {
-      -webkit-box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #5FB8FF, 20px 20px 0px 0px #5FB8FF, 25px 25px 0px 0px #5FB8FF, 0px 0px 0px 0px rgba(0,0,0,0); 
-box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #5FB8FF, 20px 20px 0px 0px #5FB8FF, 25px 25px 0px 0px #5FB8FF, 0px 0px 0px 0px rgba(0,0,0,0);
-    }
-    
-    20% {
-      -webkit-box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #5FB8FF, 20px 20px 0px 0px #5FB8FF, 25px 25px 0px 0px #5FB8FF, 0px 0px 0px 0px rgba(0,0,0,0); 
-box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #5FB8FF, 20px 20px 0px 0px #5FB8FF, 25px 25px 0px 0px #5FB8FF, 0px 0px 0px 0px rgba(0,0,0,0);
-    }
-
-  }
-  
   .require__container-card:nth-child(2), .require__container-card:nth-child(4)  {
     margin: 0 27px;
   }
