--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -18,18 +18,15 @@
 
 .container {
   z-index: 1;
-  width: 100%;
+  width: 100vw;
   max-width: 1300px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 50px;
-  padding-left: 50px;
+  
 }
 
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  cursor: pointer;
+  cursor: default;
   text-decoration: none;
   font-size: 2rem;
   display: flex;
@@ -102,8 +99,8 @@
 @media screen and (min-width: 1200px) {
   .container {
     z-index: 1;
-    width: 100%;
-    max-width: 1300px;
+    width: 2000px;
+    max-width: 2000px;
     margin-right: 20px;
     padding-right: 15px;
     padding-left: 0px;
