--- a/src/components/pages/Homepage/Home.css
+++ b/src/components/pages/Homepage/Home.css
@@ -55,6 +55,17 @@
     }
 }
 
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+    .hero-container > h1 {
+        font-size: 36px
+    }
+
+    .hero-container > p {
+        font-size: 20px;
+        text-align: center;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .hero-container > h1 {
         font-size: 34px;
