--- a/src/components/pages/Homepage/Home.css
+++ b/src/components/pages/Homepage/Home.css
@@ -1,7 +1,8 @@
 .hero-container {
-    background-image: url('background.jpg');
+    background-image: url('background3.png');
     background-size: cover;
-    opacity: 75%;
+    background-position: center;
+    opacity: 100%;
     height: 100vh;
     width: 100%;
     display: flex;
