--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -7,35 +7,27 @@
 
 .login-heading h1{
     text-align: center;
-    font-size: 3em;
+    font-size: 2.3rem;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
-    letter-spacing: 1rem;
+    letter-spacing: .7rem;
     color: #0984e3;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
 .login-heading p {
-    font-size: 30px;
+    font-size: 20px;
     color: #777;
-    line-height: 55px;
+    line-height: 35px;
+    margin-bottom: 25px;
 }
 
-.login-section {
-    color: #777;
-    font-size: 24px;
-    text-align: center;
-    margin-top: 15px;
-}
-.login-section span {
-    font-size: 18px;
-    color: black;
-}
-
-.login-section button div {
-    margin-bottom: -5px;
+.step-wrapper {
+    margin-bottom: 30px;
+    width: 80%;
+    align-self: center;
 }
 
 @media only screen and (max-width: 768px) {
@@ -49,18 +41,6 @@
         font-size: 18px;
         line-height: 28px;
     }
-
-    .login-section {
-        font-size: 15px;
-    }
-
-    .login-section span {
-        font-size: 12px;
-    }
-
-    .login-section button div {
-        margin-bottom: 0px;
-    }
 }
 
 @media screen and (max-width: 480px) {
@@ -70,10 +50,9 @@
         margin-bottom: 0px;
     }
 
-    
-
     .ant-steps-item:nth-child(3) .ant-steps-item-icon {
         margin-top: -5px;
         margin-left: -15px;
     }
+    
 }
