--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,7 +35,7 @@
 
 .logo-img {
   justify-self: start;
-  cursor: pointer;
+  cursor: default;
   width: 65px;
   height: 65px;
   display: flex;
@@ -69,8 +69,9 @@
 }
 
 .nav-item {
-  height: 80px;
+  height: 100px;
   border-bottom: 2px solid transparent;
+  padding-top: 20px;
 }
 
 .nav-item:hover {
@@ -199,6 +200,7 @@
     align-items: center;
     width: 100%;
     height: 120px;
+    margin-top: 10px;
   }
 }
 
@@ -209,18 +211,19 @@
 
   .navbar-logo {
     font-size: 1.1rem;
-    margin: 10px 10px;
+    margin: 12px 5px 7px 5px
   }
 
   .logo-img {
-    width: 30px;
-    height: 30px;
+    width: 45px;
+    height: 45px;
+    margin-top: -40px;
   }
 
   .slogan-img {
-    margin-top: -10px;
-    width: 65px;
-    height: 65px;
+    margin-top: -35px;
+    width: 85px;
+    height: 85px;
     margin-left: 0;
   }
 
