--- a/src/components/pages/Challengepage/Challenge.css
+++ b/src/components/pages/Challengepage/Challenge.css
@@ -43,7 +43,8 @@
     color: #1c2237;
     margin-bottom: 25px;
     cursor: default;
-    font-size: 2.3em;
+    font-size: 2.5em;
+    font-weight: 550;
   }
 
   .challenge__heading:hover {
@@ -105,6 +106,8 @@
     position: absolute;
     right: 10px;
     bottom: 5px;
+    font-weight: 700;
+    color: #fff;
     
   }
   /*------------------------------*/
@@ -171,9 +174,11 @@
   }
 
   .expanded-text {
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 12px;
     cursor: default;
+    font-family: sans-serif;
+    margin-bottom: -10px;
   }
 
   .toggle-up {
